--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vue3-toastify": "^0.2.8"
+  },
+  "devDependencies": {
+    "vite": "^7.1.12"
   }
 }
-
